boreal/tests/assets/invalid_files/compilation/duplicated_rule_tag.yar
// [error: tag `foo` specified multiple times]
rule a: foo bar foo {
    condition: true
}
